--- a/config/nginx/wordpress.conf
+++ b/config/nginx/wordpress.conf
@@ -1,12 +1,12 @@
 server {
     listen 80;
-    #server_name wp-hakase.co;
+    server_name _;
  
     root /var/www/html;
     index index.php;
  
-    access_log /var/log/nginx/hakase-access.log;
-    error_log /var/log/nginx/hakase-error.log;
+    access_log /var/log/nginx/wordpress-access.log;
+    error_log /var/log/nginx/wordpress-error.log;
  
     location / {
         try_files $uri $uri/ /index.php?$args;
