--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     volumes:
       - dbdata:/var/lib/mysql
     command: "--default-authentication-plugin=mysql_native_password"
+    ports: 
+      - 3306:3306
     networks:
       - wpnet
 
