--- a/config/nginx/wordpress.conf
+++ b/config/nginx/wordpress.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     server_name _;
-    client_max_body_size 20M;
+    client_max_body_size 200M;
  
     root /var/www/html;
     index index.php;
@@ -21,6 +21,7 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_param K21_ENV dev;
         fastcgi_read_timeout 900; 
     }
 
